--- a/style.css
+++ b/style.css
@@ -60,13 +60,27 @@ ul{
 .right_side{
     background:#f7f9fa; 
 }
-     /* card1 header */
+    /* Header  */
+.card_header{
+    border: 1px solid #f7f9fa;
+    border-radius: 7px;
+    background: #fff;
+}
+.header{
+    display: flex;
+    flex-direction: row;
+    padding: 15px;
+    align-items: center;
+    gap: 7px;
+}
+     /* card1 header */   
 .card1_header{
     display: flex;
     flex-direction: row; 
     padding: 10px;
     border: 1px solid lightgrey;
     border-radius: 7px;
+    background: #fff;
 }
 .card1_header img{
     width: 50px;
@@ -240,10 +254,11 @@ ul{
     /* display: inline; */
     display: flex;
     align-items: center;
+    font-size: 14px;
 }
 .side3 a{
     text-decoration: none;
-    padding-left: 100px;
+    padding-left: 70px;
     color: blue;
 }
 .side3 span{
@@ -253,8 +268,87 @@ ul{
     width: auto;
     height: auto;
 }
+.suggestion{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 10px;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+.for_you{
+    color: lightgrey;
+}
+.see_all{
+    padding-left: 120px; 
+    color: #222;
+}
+.profile1{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+}
+.profile1 a{
+    padding-left:90px;
+    color: blue;
+    text-decoration: none;
+}
+.tijani{
+    color: lightgrey;
+}
+.profile2{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+    font-size: 14px;
+}
+.profile2 a{
+    padding-left: 80px;
+    color: blue;
+    text-decoration: none;
+}
+.oyemmy{
+    color: lightgrey;
+}
+.profile3{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    margin-top: 10px; 
+}
+.profile3 a{
+    padding-left: 40px;
+    color: blue;
+    text-decoration: none;
+}
+.salami{
+    color: lightgrey;
+}
+.profile4{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    font-size: 14px;
+    margin-top: 10px;
+}
+.profile4 a{
+    padding-left: 90px;
+    color: blue;
+    text-decoration: none;
+}
+.engr{
+    color: lightgrey;
+}
 .down_part{
-    margin-top: 200px;
+    margin-top: 40px;
     font-size: 14px;
 }
 .down_part a{
