--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
-body{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    /* max-width: 1400px; */
-    background-color: #f7f9fa;
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* max-width: 1400px; */
+  background-color: #f7f9fa;
 }
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 /* .whole_container{
     width: auto; 
@@ -14,373 +15,370 @@ body{
     flex-direction: column;
     align-items: flex-start;
 } */
-    /* first side */
-.insta_logo{
-    width: 100%;
-    height: 63px;
-    margin-top: 10px;
+/* first side */
+.insta_logo {
+  width: 100%;
+  height: 63px;
+  margin-top: 10px;
 }
-.left_side{
-    display: flex;
-    flex-direction: column;
-    align-self: start;
-    border: 1px solid #f7f9fa;
-    background: #fff;
-    width: 20%;
-    height: 100%;
-    padding: 50px; 
-    padding-left: 15px;
-    position: fixed;
-    /* cursor: pointer;
+.left_side {
+  display: flex;
+  flex-direction: column;
+  align-self: start;
+  border: 1px solid #f7f9fa;
+  background: #fff;
+  width: 20%;
+  height: 100%;
+  padding: 50px;
+  padding-left: 15px;
+  position: fixed;
+  /* cursor: pointer;
     -webkit-tap-highlight-color: #00000000; */
 }
 
-ul{
-    text-decoration: none; 
-    list-style-type: none;
+ul {
+  text-decoration: none;
+  list-style-type: none;
 }
-.links li{
-    display: flex;
-    flex-direction: row;
-    align-items: center; 
-    margin-top: 25px; 
-    margin-bottom: 20px;
-    gap: 30px; 
+.links li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 25px;
+  margin-bottom: 20px;
+  gap: 30px;
 }
-.menu{
-    padding-left: 10px;
+.menu {
+  padding-left: 10px;
 }
 .menu li {
-   display: flex;  
-   margin-top: 55px; 
-   gap: 30px;
+  display: flex;
+  margin-top: 55px;
+  gap: 30px;
 }
-.menu span{
-    height: 24px; ;
-    width: 24px;
+.menu span {
+  height: 24px;
+  width: 24px;
 }
-    /* second side */
-    /* This is the main container */
-.second_side{
-    display: flex;
-    justify-content: center;  
-    align-items: flex-start;
-    align-self: center;
-    /* position: absolute; */
+/* second side */
+.second_side {
+  display: flex;
+  /* justify-content: center; */
+  /* align-items: flex-start;
+  align-self: center;*/
+  justify-content: flex-end;
+  padding: 30px;
+  margin: 0 50px;
 }
-.right_side{
-    background:#f7f9fa; 
-    width: 36%;
-    
+.right_side {
+  background: #f7f9fa;
+  max-width: 40%;
 }
-    /* Header  */
-.card_header{
-    border: 1px solid #f7f9fa;
-    border-radius: 10px;
-    background: #fff;
-    margin-top: 20px;
-    margin-bottom: 20px;  
+/* Header  */
+.card_header {
+  border: 1px solid #f7f9fa;
+  border-radius: 10px;
+  background: #fff;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-.header{
-    display: flex;
-    flex-direction: row;
-    padding: 12px;
-    align-items: center;
-    gap: 7px;
+.header {
+  display: flex;
+  flex-direction: row;
+  padding: 12px;
+  align-items: center;
+  gap: 7px;
 }
-     /* card1 header */   
-.card1_header{
-    display: flex;
-    flex-direction: row; 
-    padding: 10px;
-    border: 1px solid lightgrey;
-    border-radius: 10px;
-    background: #fff;
+/* card1 header */
+.card1_header {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  background: #fff;
 }
-.card1_header img{
-    width: 50px;
-    height: 40px;
+.card1_header img {
+  width: 50px;
+  height: 40px;
 }
-.card1_header  h3{
-    padding-left: 10px
-} 
+.card1_header h3 {
+  padding-left: 10px;
+}
 .card1_header span {
-    padding-left: 170px;    
+  padding-left: 170px;
 }
-.card1{
-    /* align-items: center; */
-    border:1px solid lightgrey ;
-    border-radius: 10px;
-    background: #fff;
-    padding-top: 3px;
+.card1 {
+  /* align-items: center; */
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  background: #fff;
+  padding-top: 3px;
 }
-.polygon_icon{
-    padding-left: 5px;
-    padding-left: 310px;
+.polygon_icon {
+  padding-left: 5px;
+  padding-left: 310px;
 }
-.icon_down{
-    padding-left: 10px;
+.icon_down {
+  padding-left: 10px;
 }
-.ologi_message{
-    padding-left: 10px;
-    line-height: 1.8;
+.ologi_message {
+  padding-left: 10px;
+  line-height: 1.8;
 }
-.down_input{
-    border: 1px solid #f7f9fa;
-    border-radius: 7px;
-    display: flex;
-    flex-direction: row;
-    padding: 10px;
+.down_input {
+  border: 1px solid #f7f9fa;
+  border-radius: 7px;
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
 }
-.comment{
-    padding-left: 10px;
-    color: lightgrey;
+.comment {
+  padding-left: 10px;
+  color: lightgrey;
 }
-.post{
-    padding-left: 240px;
-    color: lightblue;
+.post {
+  padding-left: 240px;
+  color: lightblue;
 }
 /* CARD 2 */
-.card2_header{
-    display: flex;
-    flex-direction: row; 
-    padding: 10px;
-    border: 1px solid lightgrey;
-    border-radius: 10px;
-    align-items: center;
+.card2_header {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  align-items: center;
 }
-.card2_header img{
-    width: 50px;
-    height: 40px;
+.card2_header img {
+  width: 50px;
+  height: 40px;
 }
-.card2_header  h3{
-    padding-left: 10px;
-    font-size: 15px;
-} 
+.card2_header h3 {
+  padding-left: 10px;
+  font-size: 15px;
+}
 .card2_header span {
-    padding-left: 220px;    
+  padding-left: 220px;
 }
-.card2{
-    align-items: center; 
-    border:1px solid lightgrey;
-    border-radius: 10px;
-    background: #fff;
-    padding-top: 3px;
+.card2 {
+  align-items: center;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  background: #fff;
+  padding-top: 3px;
 }
-.pearl_message2{
-    padding-left: 10px;
-    line-height: 1.8;
+.pearl_message2 {
+  padding-left: 10px;
+  line-height: 1.8;
 }
 /* card 3 */
-.card_header3{
-    display: flex;
-    flex-direction: row; 
-    padding: 10px;
-    border: 1px solid lightgrey;
-    border-radius: 10px;
-    align-items: center;
+.card_header3 {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  align-items: center;
 }
-.card_header3 img{
-    width: 50px;
-    height: 40px;
+.card_header3 img {
+  width: 50px;
+  height: 40px;
 }
-.card_header3  h3{
-    padding-left: 10px
-} 
+.card_header3 h3 {
+  padding-left: 10px;
+}
 .card_header3 span {
-    padding-left: 220px;    
+  padding-left: 220px;
 }
-.card3 img{
-    width: auto;
-    height: auto;
+.card3 img {
+  width: auto;
+  height: auto;
 }
-.card3{
-    /* align-items: center; */
-    border:1px solid lightgrey ;
-    border-radius: 10px;
-    background: #fff;
-    padding-top: 3px;
+.card3 {
+  /* align-items: center; */
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  background: #fff;
+  padding-top: 3px;
 }
-.polygon_icon{
-    padding-left: 5px;
-    padding-left: 310px;
+.polygon_icon {
+  padding-left: 5px;
+  padding-left: 310px;
 }
-.icon_down{
-    padding-left: 10px;
-    align-items: center;
+.icon_down {
+  padding-left: 10px;
+  align-items: center;
 }
-.bodysuit_message2{
-    padding-left: 10px;
-    line-height: 1.8;
-
+.bodysuit_message2 {
+  padding-left: 10px;
+  line-height: 1.8;
 }
-.suit_input{
-    border: 1px solid #f7f9fa;
-    border-radius: 10px;
+.suit_input {
+  border: 1px solid #f7f9fa;
+  border-radius: 10px;
 }
-.suit_input p{
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    color: lightgrey;
+.suit_input p {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  color: lightgrey;
 }
 /* Card 4 */
-.card_header4{
-    display: flex;
-    flex-direction: row; 
-    padding: 10px;
-    border: 1px solid lightgrey;
-    border-radius: 10px;
+.card_header4 {
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  border: 1px solid lightgrey;
+  border-radius: 10px;
 }
-.card_header4 img{
-    width: 50px;
-    height: 40px;
+.card_header4 img {
+  width: 50px;
+  height: 40px;
 }
-.card_header4  h3{
-    padding-left: 10px
-} 
+.card_header4 h3 {
+  padding-left: 10px;
+}
 .card_header4 span {
-    padding-left: 200px;    
+  padding-left: 200px;
 }
-.card4{
-    border:1px solid lightgrey ;
-    border-radius: 10px;
-    background: #fff;
-    padding-top: 3px;
+.card4 {
+  border: 1px solid lightgrey;
+  border-radius: 10px;
+  background: #fff;
+  padding-top: 3px;
 }
-.polygon_icon{
-    padding-left: 5px;
-    padding-left: 310px;
+.polygon_icon {
+  padding-left: 5px;
+  padding-left: 310px;
 }
-.icon_down{
-    padding-left: 10px;
+.icon_down {
+  padding-left: 10px;
 }
-.bbc_message{
-    padding-left: 10px;
-    line-height: 1.8;
+.bbc_message {
+  padding-left: 10px;
+  line-height: 1.8;
 }
 
 /* Third side */
-.third_container{
-    display: flex;
-    /* flex-wrap: wrap;   */
-    justify-content:end; 
-    /* align-items:flex-start;   */
-    align-self:flex-end;  
+.third_container {
+  display: flex;
+  padding: 10px;
+  margin-top: 40px;
 }
-.third_side{
-    padding-left: 25px;  
+.third_side {
+  padding-left: 25px;
 }
-.side3{
-    /* display: inline; */
-    display: flex;
-    align-items: center;
-    font-size: 14px;
+.side3 {
+  /* display: inline; */
+  display: flex;
+  align-items: center;
+  font-size: 14px;
 }
-.side3 a{
-    text-decoration: none;
-    padding-left: 70px;
-    color: blue;
+.side3 a {
+  text-decoration: none;
+  padding-left: 70px;
+  color: blue;
 }
-.side3 span{
-    padding-left: 10px;
+.side3 span {
+  padding-left: 10px;
 }
-.side3 img{
-    width: auto;
-    height: auto;
+.side3 img {
+  width: auto;
+  height: auto;
 }
-.suggestion{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-top: 10px;
-    font-size: 14px;
-    margin-bottom: 10px;
+.suggestion {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-top: 10px;
+  font-size: 14px;
+  margin-bottom: 10px;
 }
-.for_you{
-    color: lightgrey;
+.for_you {
+  color: lightgrey;
 }
-.see_all{
-    padding-left: 120px; 
-    color: #222;
+.see_all {
+  padding-left: 120px;
+  color: #222;
 }
-.profile1{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    font-size: 14px;
-    margin-top: 10px;
+.profile1 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+  margin-top: 10px;
 }
-.profile1 a{
-    padding-left:90px;
-    color: blue;
-    text-decoration: none;
+.profile1 a {
+  padding-left: 90px;
+  color: blue;
+  text-decoration: none;
 }
-.tijani{
-    color: lightgrey;
+.tijani {
+  color: lightgrey;
 }
-.profile2{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    margin-top: 10px;
-    font-size: 14px;
+.profile2 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
+  font-size: 14px;
 }
-.profile2 a{
-    padding-left: 80px;
-    color: blue;
-    text-decoration: none;
+.profile2 a {
+  padding-left: 80px;
+  color: blue;
+  text-decoration: none;
 }
-.oyemmy{
-    color: lightgrey;
+.oyemmy {
+  color: lightgrey;
 }
-.profile3{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    font-size: 14px;
-    margin-top: 10px; 
+.profile3 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+  margin-top: 10px;
 }
-.profile3 a{
-    padding-left: 40px;
-    color: blue;
-    text-decoration: none;
+.profile3 a {
+  padding-left: 40px;
+  color: blue;
+  text-decoration: none;
 }
-.salami{
-    color: lightgrey;
+.salami {
+  color: lightgrey;
 }
-.profile4{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    font-size: 14px;
-    margin-top: 10px;
+.profile4 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  font-size: 14px;
+  margin-top: 10px;
 }
-.profile4 a{
-    padding-left: 90px;
-    color: blue;
-    text-decoration: none;
+.profile4 a {
+  padding-left: 90px;
+  color: blue;
+  text-decoration: none;
 }
-.engr{
-    color: lightgrey;
+.engr {
+  color: lightgrey;
 }
-.down_part{
-    margin-top: 40px;
-    font-size: 14px;
+.down_part {
+  margin-top: 40px;
+  font-size: 14px;
 }
-.down_part a{
-    text-decoration: none;
-    color: lightgrey;
+.down_part a {
+  text-decoration: none;
+  color: lightgrey;
 }
-.down_part p{
-    color: lightgrey;
+.down_part p {
+  color: lightgrey;
 }
-.copyright_part{
-    margin-top: 30px;
-    font-size: 16px;
-    color: lightgrey;
+.copyright_part {
+  margin-top: 30px;
+  font-size: 16px;
+  color: lightgrey;
 }
