--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  /* max-width: 1400px; */
+  max-width: 1400px; 
   background-color: #f7f9fa;
 }
 * {
@@ -9,12 +9,7 @@ body {
   margin: 0;
   box-sizing: border-box;
 }
-/* .whole_container{
-    width: auto; 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-} */
+
 /* first side */
 .insta_logo {
   width: 100%;
@@ -32,8 +27,8 @@ body {
   padding: 50px;
   padding-left: 15px;
   position: fixed;
-  /* cursor: pointer;
-    -webkit-tap-highlight-color: #00000000; */
+  cursor: pointer;
+  /* -webkit-tap-highlight-color: #00000000;  */
 }
 
 ul {
@@ -63,16 +58,13 @@ ul {
 /* second side */
 .second_side {
   display: flex;
-  /* justify-content: center; */
-  /* align-items: flex-start;
-  align-self: center;*/
   justify-content: flex-end;
   padding: 30px;
   margin: 0 50px;
 }
 .right_side {
   background: #f7f9fa;
-  max-width: 40%;
+  max-width: 41%;
 }
 /* Header  */
 .card_header {
