--- a/style.css
+++ b/style.css
@@ -27,10 +27,14 @@ body {
   padding: 50px;
   padding-left: 15px;
   position: fixed;
-  cursor: pointer;
-  /* -webkit-tap-highlight-color: #00000000;  */
 }
-
+.links li:hover{
+  background: #f7f9fa;
+  border: 1px solid;
+  border-radius: 20px;
+  padding: 8px;
+  cursor: pointer;
+} 
 ul {
   text-decoration: none;
   list-style-type: none;
